[gd_scene load_steps=2 format=3 uid="uid://bmwcbwql1xwpy"]

[ext_resource type="Script" uid="uid://kfavroh2lwrl" path="res://scripts/killzone.gd" id="1_xlapc"]

[node name="killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="game_reload_timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="game_reload_timer" to="." method="_on_game_reload_timer_timeout"]
